After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726002 - libvncserver: fix non-literal format string issue
libvncserver: fix non-literal format string issue
Status: RESOLVED FIXED
Product: vino
Classification: Applications
Component: Server
unspecified
Other All
: Normal normal
: ---
Assigned To: Vino Maintainer(s)
Vino Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-03-09 20:57 UTC by Allison Karlitskaya (desrt)
Modified: 2014-03-10 01:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libvncserver: fix non-literal format string issue (1.27 KB, patch)
2014-03-09 20:57 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Allison Karlitskaya (desrt) 2014-03-09 20:57:41 UTC
vino is built with -Werror=format-nonliteral by default and uses a
non-literal format string.

Tag the function that it is used from so that the compiler allows it.
This has a side effect of ensuring that the users of this function are
doing it correctly.

The easiest way to do this correctly is to use the macro in glib, so we
must include the header from this file (which did not yet have it).
Comment 1 Allison Karlitskaya (desrt) 2014-03-09 20:57:43 UTC
Created attachment 271382 [details] [review]
libvncserver: fix non-literal format string issue
Comment 2 David King 2014-03-09 21:01:42 UTC
Review of attachment 271382 [details] [review]:

Looks good.
Comment 3 Allison Karlitskaya (desrt) 2014-03-10 01:11:24 UTC
Attachment 271382 [details] pushed as e290109 - libvncserver: fix non-literal format string issue

Thanks!